src/test/ui/issues/issue-21177.stderr
error[E0391]: cycle detected when computing the bounds for type parameter `T`
  --> $DIR/issue-21177.rs:6:21
   |
LL | fn foo<T: Trait<A = T::B>>() { }
   |                     ^^^^
   |
   = note: ...which again requires computing the bounds for type parameter `T`, completing the cycle
note: cycle used when processing `foo`
  --> $DIR/issue-21177.rs:6:21
   |
LL | fn foo<T: Trait<A = T::B>>() { }
   |                     ^^^^

error[E0220]: associated type `B` not found for `T`
  --> $DIR/issue-21177.rs:6:21
   |
LL | fn foo<T: Trait<A = T::B>>() { }
   |                     ^^^^ associated type `B` not found

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0220, E0391.
For more information about an error, try `rustc --explain E0220`.
